arregladas noticias sidebar

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700,900" rel="stylesheet">
   <link rel="stylesheet" href="style.css" type="text/css">
 
-  <title>Prueba HTML&CSS</title>
+  <title>Fundación Niño & Cancer | Nosotros</title>
 </head>
 
 <body>
@@ -53,8 +53,8 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#">Inicio<span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Nosotros</a></li>
-            <li><a href="#">Noticias</a></li>
+            <li><a href="nosotros.html">Nosotros</a></li>
+            <li><a href="news.html">Noticias</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -195,7 +195,7 @@
           <h2>Noticias</h2>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-12">
-          <a href="">
+          <a href="news.html">
             <div class="thumbnail">
               <div class="caption">
                 <h4>Una gran alegría originó la actividad Montaña de la Alegría</h4>
@@ -206,7 +206,7 @@
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-12">
-          <a href="">
+          <a href="#">
             <div class="thumbnail">
               <div class="caption">
                 <h4>A volar con Sky</h4>
@@ -218,7 +218,7 @@
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-12 ">
-          <a href="">
+          <a href="#">
             <div class="thumbnail">
               <div class="caption">
                 <h4>Finalizó proceso de postulación a Becas de Estudio 2018</h4>
@@ -229,7 +229,7 @@
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-12">
-          <a href="">
+          <a href="#">
             <div class="thumbnail">
               <div class="caption">
                 <h4>Tallarinata de amor y sonrisas</h4>
@@ -241,7 +241,7 @@
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-12">
-          <a href="">
+          <a href="#">
             <div class="thumbnail">
               <div class="caption">
                 <h4>Carta de agradecimiento año 2016</h4>
@@ -253,7 +253,7 @@
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-12">
-          <a href="">
+          <a href="#">
             <div class="thumbnail">
               <div class="caption">
                 <h4>Conozca los requisitos para postular a nuestros departamentos de acogida </h4>
@@ -264,7 +264,7 @@
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-12">
-          <a href="">
+          <a href="#">
             <div class="thumbnail">
               <div class="caption">
                 <h4>Ex paciente publica su libro "Con tu apoyo, yo le gano al cancer"</h4>
@@ -275,7 +275,7 @@
           </a>
         </div>
         <div class="col-md-3 col-sm-4 col-xs-12">
-          <a href="news.html">
+          <a href="#">
             <div class="thumbnail masnoticias">
               <div class="caption">
                 <p><img src="image/news.svg"></p>
