--- a/news.html
+++ b/news.html
@@ -27,7 +27,7 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css">
 
-    <title>Prueba HTML&CSS</title>
+    <title>Fundación Niño & Cancer Noticias</title>
 </head>
 
 <body>
@@ -52,14 +52,15 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#">Inicio<span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Nosotros</a></li>
-                        <li><a href="#">Noticias</a></li>
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="nosotros.html">Nosotros</a></li>
+                        <li class="active"><a href="news.html">Noticias<span class="sr-only">(current)</span></a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
     </header>
+
     <main>
         <div class="row">
             <div class="container">
@@ -117,40 +118,26 @@
                 <div class="col-md-3">
                     <div class="sidebarnoticias">
                         <h3>Más noticias</h3>
-                        <div class="col-md-12">
+                        <div class="noticiasidebar">
                             <a href="">
-                                <div class="thumbnail">
-                                    <div class="caption">
-                                        <h4>Una gran alegría originó la actividad Montaña de la Alegría</h4>
-                                        <h5>20 agosto 2018</h5>
-                                        <p>Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002.</p>
-                                    </div>
-                                </div>
+                                <h4>Una gran alegría originó la actividad Montaña de la Alegría</h4>
+                                <h5>20 agosto 2018</h5>
+                                <p>Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002.</p>
                             </a>
                         </div>
-                        <div class="col-md-12">
+                        <div class="noticiasidebar">
                             <a href="">
-                                <div class="thumbnail">
-                                    <div class="caption">
-                                        <h4>A volar con Sky</h4>
-                                        <h5>20 agosto 2018</h5>
-                                        <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible
-                                            invitación.
-                                            El Miércoles 4 de
-                                            Octubre fuimos a volar en su nuevo avión A320neoSky.</p>
-                                    </div>
-                                </div>
+                                <h4>A volar con Sky</h4>
+                                <h5>20 agosto 2018</h5>
+                                <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible
+                                    invitación.</p>
                             </a>
                         </div>
-                        <div class="col-md-12 ">
+                        <div class="noticiasidebar">
                             <a href="">
-                                <div class="thumbnail">
-                                    <div class="caption">
-                                        <h4>Finalizó proceso de postulación a Becas de Estudio 2018</h4>
-                                        <h5>20 agosto 2018</h5>
-                                        <p>El objetivo de este proyecto es beneficiar a jóvenes recuperados de cáncer.</p>
-                                    </div>
-                                </div>
+                                <h4>Finalizó proceso de postulación a Becas de Estudio 2018</h4>
+                                <h5>20 agosto 2018</h5>
+                                <p>El objetivo de este proyecto es beneficiar a jóvenes recuperados de cáncer.</p>
                             </a>
                         </div>
                     </div><!-- / sidebarnoticias -->
