--- a/nosotros.html
+++ b/nosotros.html
@@ -27,9 +27,9 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css">
 
-    <title>Nosotros</title>
+    <title>Fundación Niño & Cancer | Nosotros</title>
 </head>
-.
+
 
 <body>
     <header>
@@ -53,14 +53,15 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="#">Inicio<span class="sr-only">(current)</span></a></li>
-                        <li><a href="#">Nosotros</a></li>
-                        <li><a href="#">Noticias</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li class="active"><a href="#">Nosotros<span class="sr-only">(current)</span></a></li>
+                        <li><a href="news.html">Noticias</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
     </header>
+
     <main>
         <div class="carousel-background carousel-background-img2">
             <div class="container">
