se terminó sidebar

--- a/news.html
+++ b/news.html
@@ -144,21 +144,21 @@
                     <div class="proximas-actividades">
                         <h3>Próximas actividades</h3>
                         <a href="">
-                            <div class="col-md-12">
+                            <div class="actividadproxima">
                                 <h6>10 noviembre 2018</h6>
                                 <h4> Nombre de la Actividad</h4>
                                 <p>Descripción breve de la actividad sit amet consectetur adipisicing elit.</p>
                             </div>
                         </a>
                         <a href="">
-                            <div class="col-md-12">
+                            <div class="actividadproxima">
                                 <h6>10 noviembre 2018</h6>
                                 <h4> Nombre de la Actividad 2</h4>
                                 <p>Descripción breve de la actividad sit amet consectetur adipisicing elit.</p>
                             </div>
                         </a>
                         <a href="">
-                            <div class="col-md-12">
+                            <div class="actividadproxima">
                                 <h6>10 noviembre 2018</h6>
                                 <h4> Nombre de la Actividad 3</h4>
                                 <p>Descripción breve de la actividad sit amet consectetur adipisicing elit.</p>
