cambio de imágen de backgroundcarrousel

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <p>El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y
             leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y
             fortaleciendo su integración social y familiar.</p>
-          <a href="#" class="btn btn-default" role="button">Conocer Más!</a>
+          <a href="nosotros.html" class="btn btn-default" role="button">Conocer Más!</a>
         </div><!-- fin col md 6-->
       </div>
 
