tamaño de imagenes, tamaños de formularios de contactos, stylos y pequeñas cosas

--- a/news.html
+++ b/news.html
@@ -114,7 +114,30 @@
                         <br>
                         <br>
                         Muchas gracias!!! </p>
+
+                    <div class="media">
+                        <div class="media-left">
+                            <img src="image/equipo/11.jpg" class="media-object" style="width:60px">
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading"> Eduardo Paez</h4>
+                            <p>Quisiera agradecer a la fundación y a todos los colaboradores de esta actividad que
+                                permitieron que mi hija Catalina pudiera tener un día hermoso junto al resto de sus
+                                amigos de la fundación.</p>
+                        </div>
+                    </div>
+                    <div class="media">
+                        <div class="media-left">
+                            <img src="image/Josefina.jpg" class="media-object" style="width:60px">
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading"> Josefina Borja</h4>
+                            <p> Gracias por este maravilloso día, mi hijo Feli llegó contando que aprendió a skiar y
+                                que se hizo tres amigos. Saludos!!</p>
+                        </div>
+                    </div>
                 </div>
+                <!--/col-md-9 -->
                 <div class="col-md-3">
                     <div class="sidebarnoticias">
                         <h3>Más noticias</h3>
