nuevo contenido a nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -71,7 +71,53 @@
         </div>
 
         <div class="container">
-            <div class="col-md-12 margenes">
+            <div class="col-md-9 margenes">
+                <h2>Misión</h2>
+                <p>La Fundación Niño y Cáncer, inicialmente llamada Fundación Oncológica Las Condes, es
+                    una entidad sin fines de lucro que fue
+                    creada el 23 de noviembre de 1992 y obteniendo personalidad Jurídica el 2 de
+                    febrero del 1993 por Decreto Supremo N° 143 y publicado en el Diario Oficial el 2
+                    de marzo de 1993.
+                    <br><br>
+                    Por el decreto Nº 994 publicado en el Diario Oficial Nº 36.817 del 20 de noviembre
+                    del año 2000, se aprueba la reforma de los estatutos de Fundación Oncológica Las
+                    Condes, autorizándose el cambio de nombre a Fundación Niño y Cáncer.
+                    <br>
+                    <br>
+                    El objetivo principal de la Fundación Niño y Cáncer es contribuir en el tratamiento
+                    de todos los niños con cáncer y/o leucemia atendidos en los Hospitales Públicos de nuestro país
+                    (Plan Auge y GES) ayudando a su desarrollo, mejorando su calidad de vida y
+                    fortaleciendo su integración social y familiar.
+                    <br>
+                    <br>
+                    La Fundación Niño y Cáncer tiene como objetivo central, la asistencia, ayuda y
+                    apoyo a los niños con cáncer de escasos recursos y/o en situación de discapacidad, atendidos en los
+                    hospitales públicos del país, atendidos en los Hospitales Públicos de nuestro país
+                    (Plan Auge y GES) aportando a la calidad de vida del paciente y de su familia.
+                    <br>
+                    <br>
+                    Por este motivo en las líneas de trabajo de la Fundación esto tiene un rol
+                    preponderante y los diversos proyectos están enfocados a la reinserción en la
+                    comunidad de nuestros pacientes, potenciando sus habilidades.
+                    <br>
+                    <br>
+                    La curación del cáncer es una tarea fundamental, sin embargo, todo el esfuerzo y
+                    sacrificio de los pacientes, sus familias, equipo médico y Sistema de Salud, se pierden si no se
+                    logra una real integración de: Pacientes - Familia - Comunidad.
+                    <br>
+                    <br>
+                    Desde sus inicios Fundación Niño y Cáncer ha tenido importantes logros que
+                    contribuyen a lograr un mejor tratamiento para los niños con cáncer y muy especialmente a la
+                    reinserción
+                    de estos niños a sus hogares y a la comunidad completando el círculo:
+                    <br>
+                    <br>
+                    <b>Sano – Enfermo – Tratamiento – Curación – Rehabilitación – Reinserción – Sano
+                    </b>
+                </p>
+                <h2>Objetivos</h2>
+                <p><b>Enfermo, tratamiento, Curación, Rehabilitación, Reinserción</b></p>
+
                 <h2>CONSEJO GENERAL</h2>
                 <p>Este consejo sobre la base de un conocimiento técnico acabado de la enfermedad a nivel nacional e
                     internacional, dan las líneas generales del trabajo de la Fundación.
@@ -244,6 +290,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="cabecera-contactos col-md-12">
                     <h2>Contáctanos aquí!</h2>
                     <p>pronto te responderemos<p>
