--- a/nosotros.html
+++ b/nosotros.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="container">
-            <div class="col-md-9 margenes">
+            <div class="col-md-10 col-md-offset-1 margenes">
                 <h2>Misión</h2>
                 <p>La Fundación Niño y Cáncer, inicialmente llamada Fundación Oncológica Las Condes, es
                     una entidad sin fines de lucro que fue
