--- a/index.html
+++ b/index.html
@@ -88,205 +88,215 @@
           <div class="carousel-caption">
             <h2>Tú también puedes ser parte!</h2>
             <p>Únete a la campaña donando $7.000 mensuales.</p>
-            <a href="#">¡DONA AQUÍ!</a>
+            <a href="#"">¡DONA AQUÍ!</a>
           </div>
         </div>
       </div>
 
       <!-- Controls -->
-      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div> <!-- /carousel-->
-    <div class="row">
-      <div class="container text-center">
-        <div class="col-md-12 seccionheader">
-          <h1>¿QUÉ HACEMOS?</h1>
-        </div>
-        <div class="col-md-3 col-sm-6 col-xs-12">
-          <div class="circle">
-            <img src="image/hand.svg" width="100%">
+      <a class="
+              left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div> <!-- /carousel-->
+          <div class="row">
+            <div class="container text-center">
+              <div class="col-md-12 seccionheader">
+                <h1>¿QUÉ HACEMOS?</h1>
+              </div>
+              <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="circle">
+                  <img src="image/hand.svg" width="100%">
+                </div>
+                <h3>Apoyamos a Cada Uno</h3>
+                <p>Nuestros niños son prioridad durante toda su enfermedad.</p>
+              </div>
+              <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="circle">
+                  <img src="image/espacio.svg" width="90%">
+                </div>
+                <h3>Construímos Espacios para su Bienestar</h3>
+                <p>Creamos los espacios de recreación que mejoran la calidad de vida durante y posterior a su
+                  enfermedad.</p>
+              </div>
+              <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="circle">
+                  <img src="image/people.svg" width="90%">
+                </div>
+                <h3>Velamos por su Reintegración Social</h3>
+                <p>Los apoyamos en sus estudios a través de Becas.</p>
+              </div>
+              <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="circle">
+                  <img src="image/Familia.svg" width="80%">
+                </div>
+                <h3>Apoyo para las familias</h3>
+                <p>A través de almuerzo para padres con hijos hospitalizados, cenas de navidad, entre otros. </p>
+              </div>
+            </div>
           </div>
-          <h3>Apoyamos a Cada Uno</h3>
-          <p>Nuestros niños son prioridad durante toda su enfermedad.</p>
-        </div>
-        <div class="col-md-3 col-sm-6 col-xs-12">
-          <div class="circle">
-            <img src="image/espacio.svg" width="90%">
+          <div class="row">
+            <div class="container">
+              <div class="col-md-12 col-sm-12 text-center">
+                <h2>¿Cómo nos puedes Ayudar?</h2>
+              </div>
+              <div class="col-md-6 col-sm-6 text-center">
+                <h3>Voluntariado</h3>
+                <div class="subvoluntario1">
+                </div>
+                <div class="subvoluntario2">
+                  <h4>Únete a nuestro equipo!</h4>
+                  <p>Conoce las diferentes formas de colaborar como voluntario en las diferentes actividades junto a
+                    nuestros
+                    niños,</h4>
+                    <p><a href="#" class="btn btn-default" role="button">Conócelas</a></p>
+                </div>
+              </div>
+              <div class="col-md-6 col-sm-6 text-center">
+                <h3>Donaciones</h3>
+                <div class="subdonacion1 text-center">
+                  <img src="image/noun_Pig_104182.svg">
+                </div>
+                <div class="subdonacion2">
+                  <h4>Tienes hasta 8 formas de ayudarlos!</h4>
+                  <p>Hemos creado diferentes opciones para que <b>TODOS</b> podamos ayudar.</h4>
+                    <p><a href="#" class="btn btn-default" role="button">Conócelas</a></p>
+                </div>
+              </div>
+            </div>
           </div>
-          <h3>Construímos Espacios para su Bienestar</h3>
-          <p>Creamos los espacios de recreación que mejoran la calidad de vida durante y posterior a su enfermedad.</p>
-        </div>
-        <div class="col-md-3 col-sm-6 col-xs-12">
-          <div class="circle">
-            <img src="image/people.svg" width="90%">
-          </div>
-          <h3>Velamos por su Reintegración Social</h3>
-          <p>Los apoyamos en sus estudios a través de Becas.</p>
-        </div>
-        <div class="col-md-3 col-sm-6 col-xs-12">
-          <div class="circle">
-            <img src="image/Familia.svg" width="80%">
-          </div>
-          <h3>Apoyo para las familias</h3>
-          <p>A través de almuerzo para padres con hijos hospitalizados, cenas de navidad, entre otros. </p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="container">
-        <div class="col-md-12 col-sm-12 text-center">
-          <h2>¿Cómo nos puedes Ayudar?</h2>
-        </div>
-        <div class="col-md-6 col-sm-6 text-center">
-          <h3>Voluntariado</h3>
-          <div class="subvoluntario1">
-          </div>
-          <div class="subvoluntario2">
-            <h4>Únete a nuestro equipo!</h4>
-            <p>Conoce las diferentes formas de colaborar como voluntario en las diferentes actividades junto a nuestros
-              niños,</h4>
-              <p><a href="#" class="btn btn-default" role="button">Conócelas</a></p>
-          </div>
-        </div>
-        <div class="col-md-6 col-sm-6 text-center">
-          <h3>Donaciones</h3>
-          <div class="subdonacion1 text-center">
-            <img src="image/noun_Pig_104182.svg">
-          </div>
-          <div class="subdonacion2">
-            <h4>Tienes hasta 8 formas de ayudarlos!</h4>
-            <p>Hemos creado diferentes opciones para que <b>TODOS</b> podamos ayudar.</h4>
-              <p><a href="#" class="btn btn-default" role="button">Conócelas</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <div class="row">
-      <div class="container">
-        <div class="col-md-6 col-sm-6">
-          <div class="avatarequipo2" id="img1"></div>
-          <div class="avatarequipo2" id="img2"></div>
-          <div class="avatarequipo2" id="img3"></div>
-          <div class="avatarequipo2" id="img4"></div>
-        </div><!-- fin col md 6-->
-        <div class="col-md-6 col-sm-6 parrafos">
-          <h2>¿Quiénes Somos?</h2>
-          <p>En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer. En el
-            año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817, para
-            atender solamente a niños con cáncer.</p>
-          <p>El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con cáncer y
-            leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida y
-            fortaleciendo su integración social y familiar.</p>
-          <a href="nosotros.html" class="btn btn-default" role="button">Conocer Más!</a>
-        </div><!-- fin col md 6-->
-      </div>
+          <div class="row">
+            <div class="container">
+              <div class="col-md-6 col-sm-6">
+                <div class="avatarequipo2" id="img1"></div>
+                <div class="avatarequipo2" id="img2"></div>
+                <div class="avatarequipo2" id="img3"></div>
+                <div class="avatarequipo2" id="img4"></div>
+              </div><!-- fin col md 6-->
+              <div class="col-md-6 col-sm-6 parrafos">
+                <h2>¿Quiénes Somos?</h2>
+                <p>En el año 1992 se creó la Fundación Oncológica Las Condes, atendiendo a niños y adultos con cáncer.
+                  En el
+                  año 2000 se modifican sus estatutos según el decreto N° 994 publicado en el Diario Oficial N° 36817,
+                  para
+                  atender solamente a niños con cáncer.</p>
+                <p>El objetivo general de la Fundación es contribuir con el tratamiento integral de los niños con
+                  cáncer y
+                  leucemia del país (Plan AUGE y GES), ayudando a su desarrollo integral, mejorando su calidad de vida
+                  y
+                  fortaleciendo su integración social y familiar.</p>
+                <a href="nosotros.html" class="btn btn-default" role="button">Conocer Más!</a>
+              </div><!-- fin col md 6-->
+            </div>
 
-    </div>
-    <div class="row">
-      <div class="container text">
-        <div class="col-md-12 col-sm-12 col-xs-12 seccionheader">
-          <h2>Noticias</h2>
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-12">
-          <a href="news.html">
-            <div class="thumbnail">
-              <div class="caption">
-                <h4>Una gran alegría originó la actividad Montaña de la Alegría</h4>
-                <h5>20 agosto 2018</h5>
-                <p>Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002.</p>
+          </div>
+          <div class="row">
+            <div class="container text">
+              <div class="col-md-12 col-sm-12 col-xs-12 seccionheader">
+                <h2>Noticias</h2>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-12">
-          <a href="#">
-            <div class="thumbnail">
-              <div class="caption">
-                <h4>A volar con Sky</h4>
-                <h5>20 agosto 2018</h5>
-                <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación. El Miércoles 4 de
-                  Octubre fuimos a volar en su nuevo avión A320neoSky.</p>
+              <div class="col-md-3 col-sm-4 col-xs-12">
+                <a href="news.html">
+                  <div class="thumbnail">
+                    <div class="caption">
+                      <h4>Una gran alegría originó la actividad Montaña de la Alegría</h4>
+                      <h5>20 agosto 2018</h5>
+                      <p>Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002.</p>
+                    </div>
+                  </div>
+                </a>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-12 ">
-          <a href="#">
-            <div class="thumbnail">
-              <div class="caption">
-                <h4>Finalizó proceso de postulación a Becas de Estudio 2018</h4>
-                <h5>20 agosto 2018</h5>
-                <p>El objetivo de este proyecto es beneficiar a jóvenes recuperados de cáncer.</p>
+              <div class="col-md-3 col-sm-4 col-xs-12">
+                <a href="#">
+                  <div class="thumbnail">
+                    <div class="caption">
+                      <h4>A volar con Sky</h4>
+                      <h5>20 agosto 2018</h5>
+                      <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible invitación. El Miércoles 4
+                        de
+                        Octubre fuimos a volar en su nuevo avión A320neoSky.</p>
+                    </div>
+                  </div>
+                </a>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-12">
-          <a href="#">
-            <div class="thumbnail">
-              <div class="caption">
-                <h4>Tallarinata de amor y sonrisas</h4>
-                <h5>20 agosto 2018</h5>
-                <p>Con gran éxito se desarrolló nuestra Tallarinata de Amor y Sonrisas el 30 de agosto en el Estadio
-                  del Banco Central.</p>
+              <div class="col-md-3 col-sm-4 col-xs-12 ">
+                <a href="#">
+                  <div class="thumbnail">
+                    <div class="caption">
+                      <h4>Finalizó proceso de postulación a Becas de Estudio 2018</h4>
+                      <h5>20 agosto 2018</h5>
+                      <p>El objetivo de este proyecto es beneficiar a jóvenes recuperados de cáncer.</p>
+                    </div>
+                  </div>
+                </a>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-12">
-          <a href="#">
-            <div class="thumbnail">
-              <div class="caption">
-                <h4>Carta de agradecimiento año 2016</h4>
-                <h5>20 agosto 2016</h5>
-                <p>Fundación Niño y Cáncer agradece sinceramente a empresas, socios, particulares, colegios y a cada
-                  uno de ustedes</p>
+              <div class="col-md-3 col-sm-4 col-xs-12">
+                <a href="#">
+                  <div class="thumbnail">
+                    <div class="caption">
+                      <h4>Tallarinata de amor y sonrisas</h4>
+                      <h5>20 agosto 2018</h5>
+                      <p>Con gran éxito se desarrolló nuestra Tallarinata de Amor y Sonrisas el 30 de agosto en el
+                        Estadio
+                        del Banco Central.</p>
+                    </div>
+                  </div>
+                </a>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-12">
-          <a href="#">
-            <div class="thumbnail">
-              <div class="caption">
-                <h4>Conozca los requisitos para postular a nuestros departamentos de acogida </h4>
-                <h5>20 agosto 2018</h5>
-                <p>Departamento de acogida abre cupos para el año 2017.</p>
+              <div class="col-md-3 col-sm-4 col-xs-12">
+                <a href="#">
+                  <div class="thumbnail">
+                    <div class="caption">
+                      <h4>Carta de agradecimiento año 2016</h4>
+                      <h5>20 agosto 2016</h5>
+                      <p>Fundación Niño y Cáncer agradece sinceramente a empresas, socios, particulares, colegios y a
+                        cada
+                        uno de ustedes</p>
+                    </div>
+                  </div>
+                </a>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-12">
-          <a href="#">
-            <div class="thumbnail">
-              <div class="caption">
-                <h4>Ex paciente publica su libro "Con tu apoyo, yo le gano al cancer"</h4>
-                <h5>20 agosto 2018</h5>
-                <p>Marlene Zavala escribe para devolver la mano.</p>
+              <div class="col-md-3 col-sm-4 col-xs-12">
+                <a href="#">
+                  <div class="thumbnail">
+                    <div class="caption">
+                      <h4>Conozca los requisitos para postular a nuestros departamentos de acogida </h4>
+                      <h5>20 agosto 2018</h5>
+                      <p>Departamento de acogida abre cupos para el año 2017.</p>
+                    </div>
+                  </div>
+                </a>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-12">
-          <a href="#">
-            <div class="thumbnail masnoticias">
-              <div class="caption">
-                <p><img src="image/news.svg"></p>
-                <p>Galería de Noticias</p>
+              <div class="col-md-3 col-sm-4 col-xs-12">
+                <a href="#">
+                  <div class="thumbnail">
+                    <div class="caption">
+                      <h4>Ex paciente publica su libro "Con tu apoyo, yo le gano al cancer"</h4>
+                      <h5>20 agosto 2018</h5>
+                      <p>Marlene Zavala escribe para devolver la mano.</p>
+                    </div>
+                  </div>
+                </a>
               </div>
-            </div>
-          </a>
-        </div>
+              <div class="col-md-3 col-sm-4 col-xs-12">
+                <a href="#">
+                  <div class="thumbnail masnoticias">
+                    <div class="caption">
+                      <p><img src="image/news.svg"></p>
+                      <p>Galería de Noticias</p>
+                    </div>
+                  </div>
+                </a>
+              </div>
 
-      </div><!-- / container -->
-    </div>
+            </div><!-- / container -->
+          </div>
 
   </main>
   <footer>
