se arreglo link a pagina nueva de noticias galeria.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="#">Inicio<span class="sr-only">(current)</span></a></li>
             <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="news.html">Noticias</a></li>
+            <li><a href="galeria.html">Noticias</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -285,7 +285,7 @@
                 </a>
               </div>
               <div class="col-md-3 col-sm-4 col-xs-12">
-                <a href="#">
+                <a href="galeria.html">
                   <div class="thumbnail masnoticias">
                     <div class="caption">
                       <p><img src="image/news.svg"></p>
