--- a/news.html
+++ b/news.html
@@ -54,7 +54,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">Inicio</a></li>
                         <li><a href="nosotros.html">Nosotros</a></li>
-                        <li class="active"><a href="news.html">Noticias<span class="sr-only">(current)</span></a></li>
+                        <li class="active"><a href="galeria.html">Noticias<span class="sr-only">(current)</span></a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
