arregaldo link navbar, faltaba index.html

--- a/news.html
+++ b/news.html
@@ -52,7 +52,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Inicio</a></li>
+                        <li><a href="index.htmlS">Inicio</a></li>
                         <li><a href="nosotros.html">Nosotros</a></li>
                         <li class="active"><a href="galeria.html">Noticias<span class="sr-only">(current)</span></a></li>
                     </ul>
