--- a/galeria.html
+++ b/galeria.html
@@ -52,9 +52,9 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Inicio</a></li>
+                        <li><a href="index.html">Inicio</a></li>
                         <li><a href="nosotros.html">Nosotros</a></li>
-                        <li class="active"><a href="news.html">Noticias<span class="sr-only">(current)</span></a></li>
+                        <li class="active"><a href="galeria.html">Noticias<span class="sr-only">(current)</span></a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
@@ -64,47 +64,65 @@
     <main>
         <div class="row">
             <div class="container">
-                <div class="col-md-9 noticia margenes">
-                    <img src="image/montaña.jpg" alt="">
-                    <div class="agrup">
-                        <h5>20 agosto 2018</h5>
-                        <h2>Una gran alegría originó la actividad Montaña de la Alegría</h2>
-                        <h4> Nuestros niños tuvieron un día extraordinario junto a la gente del hotel Portillo</h4>
+                <div class="col-md-9 margenes">
+                    <div class="noticia">
+                        <img src="image/montaña.jpg" alt="">
+                        <div class="agrup2">
+                            <a href="news.html">
+                                <h5>20 agosto 2018</h5>
+                                <h2>Una gran alegría originó la actividad Montaña de la Alegría</h2>
+                                <h4> Nuestros niños tuvieron un día extraordinario junto a la gente del hotel Portillo</h4>
+                            </a>
+                        </div>
+                        <p>La Fundación Niño y Cáncer quiere agradecer la importante ayuda recibida que ha permitido
+                            realizar con un gran éxito el Taller de Ski, como parte del Programa Montaña de la alegría
+                            2018...<p>
                     </div>
-                    <p>La Fundación Niño y Cáncer quiere agradecer la importante ayuda recibida que ha permitido
-                        realizar con un gran éxito el Taller de Ski, como parte del Programa Montaña de la alegría
-                        2018. En esta oportunidad 3 niños Ecuatorianos, una niña Boliviana y 3 chilenos han podido
-                        disfrutar de su estadía en la Escuela de Montaña del Ejercito de Chile del 20 al 24 de Agosto
-                        2018 aprendiendo a esquiar en Portillo.<p>
+                    <div class="noticia">
+                        <img src="image/montaña.jpg" alt="">
+                        <div class="agrup2">
+                            <a href="#">
+                                <h5>20 agosto 2018</h5>
+                                <h2>Una gran alegría originó la actividad Montaña de la Alegría</h2>
+                                <h4> Nuestros niños tuvieron un día extraordinario junto a la gente del hotel Portillo</h4>
+                            </a>
+                        </div>
+                        <p>La Fundación Niño y Cáncer quiere agradecer la importante ayuda recibida que ha permitido
+                            realizar con un gran éxito el Taller de Ski, como parte del Programa Montaña de la alegría
+                            2018...<p>
+                    </div>
+                    <div class="noticia">
+                        <img src="image/montaña.jpg" alt="">
+                        <div class="agrup2">
+                            <a href="#">
+                                <h5>20 agosto 2018</h5>
+                                <h2>Una gran alegría originó la actividad Montaña de la Alegría</h2>
+                                <h4> Nuestros niños tuvieron un día extraordinario junto a la gente del hotel Portillo</h4>
+                            </a>
+                        </div>
+                        <p>La Fundación Niño y Cáncer quiere agradecer la importante ayuda recibida que ha permitido
+                            realizar con un gran éxito el Taller de Ski, como parte del Programa Montaña de la alegría
+                            2018...<p>
+                    </div>
+                    <div class="noticia">
+                        <img src="image/montaña.jpg" alt="">
+                        <div class="agrup2">
+                            <a href="#">
+                                <h5>20 agosto 2018</h5>
+                                <h2>Una gran alegría originó la actividad Montaña de la Alegría</h2>
+                                <h4> Nuestros niños tuvieron un día extraordinario junto a la gente del hotel Portillo</h4>
+                            </a>
+                        </div>
+                        <p>La Fundación Niño y Cáncer quiere agradecer la importante ayuda recibida que ha permitido
+                            realizar con un gran éxito el Taller de Ski, como parte del Programa Montaña de la alegría
+                            2018...<p>
+                    </div>
                 </div>
-
                 <!--/col-md-9 -->
-                <div class="col-md-3">
-                    <div class="sidebarnoticias">
-                        <h3>Más noticias</h3>
-                        <div class="noticiasidebar">
-                            <a href="">
-                                <h4>Una gran alegría originó la actividad Montaña de la Alegría</h4>
-                                <h5>20 agosto 2018</h5>
-                                <p>Proyecto recreativo y psicoterapéutico que se realiza desde el año 2002.</p>
-                            </a>
-                        </div>
-                        <div class="noticiasidebar">
-                            <a href="">
-                                <h4>A volar con Sky</h4>
-                                <h5>20 agosto 2018</h5>
-                                <p>La Fundación Niño y Cáncer quiere agradecer a SKY por su increible
-                                    invitación.</p>
-                            </a>
-                        </div>
-                        <div class="noticiasidebar">
-                            <a href="">
-                                <h4>Finalizó proceso de postulación a Becas de Estudio 2018</h4>
-                                <h5>20 agosto 2018</h5>
-                                <p>El objetivo de este proyecto es beneficiar a jóvenes recuperados de cáncer.</p>
-                            </a>
-                        </div>
-                    </div><!-- / sidebarnoticias -->
+
+
+                <div class="col-md-3 ">
+
                     <div class="proximas-actividades">
                         <h3>Próximas actividades</h3>
                         <a href="">
