--- a/galeria.html
+++ b/galeria.html
@@ -79,7 +79,7 @@
                             2018...<p>
                     </div>
                     <div class="noticia">
-                        <img src="image/montaña.jpg" alt="">
+                        <img src="image/evento1.jpg" alt="">
                         <div class="agrup2">
                             <a href="#">
                                 <h5>20 agosto 2018</h5>
@@ -92,7 +92,7 @@
                             2018...<p>
                     </div>
                     <div class="noticia">
-                        <img src="image/montaña.jpg" alt="">
+                        <img src="image/evento2.jpg" alt="">
                         <div class="agrup2">
                             <a href="#">
                                 <h5>20 agosto 2018</h5>
@@ -154,36 +154,40 @@
 
     </main>
     <footer>
-        <div class="container">
-            <div class="col-md-4">
-                <h4>Contacto</h4>
-                <ul>
-                    <li><b>Fono</b>: 221 708 21, 221 708 11</li>
-                    <li><b>Fax</b>: 221 708 20</li>
-                    <li>Tupungato 10070 Vitacura, Santiago de Chile</li>
-                    <li></li>
-                </ul>
-            </div>
-            <div class="col-md-4">
-                <h4>Mantente Informado!</h4>
-                <form class="navbar-form ">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Ingresa tu email por favor">
-                    </div>
-                    <button type="submit" class="btn btn-default">Suscríbete</button>
-                </form>
-            </div>
-            <div class="col-md-4 redes">
-                <h4>Síguenos!</h4>
-                <ul>
-                    <li><a href="#"><img src="image/facebook-white.svg" style="height:35px" alt=""></a> </li>
-                    <li><a href="#"><img src="image/instagram.svg" style="height:35px" alt=""></a></li>
-                    <li><a href="#"><img src="image/twitter-white.svg" style="height:35px" alt=""></a></li>
-                </ul>
-            </div>
-        </div><!-- /container -->
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.509134447668!2d-70.5393396848024!3d-33.38387898079302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses-419!2scl!4v1539723621516"
-            width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <div class="row">
+            <div class="container">
+                <div class="col-md-6">
+                    <h4>Escríbenos!</h4>
+                    <input type="text" class="form-control margenes" placeholder="Hola! Ingresa aquí tu nombre por favor">
+                    <input type="text" class="form-control margenes" placeholder="Y aquí, escribe tu e-mail">
+                    <textarea class="form-control margenes" rows="3" placeholder="Qué te gustaría comentar o preguntarnos?"></textarea>
+                    <button type="submit" class="btn btn-default margenes">envíar</button>
+                </div>
+                <div class="col-md-4 col-md-offset-2">
+                    <h4>Contacto</h4>
+                    <ul>
+                        <li><b>Fono</b>: 221 708 21, 221 708 11</li>
+                        <li><b>Fax</b>: 221 708 20</li>
+                        <li>Tupungato 10070 Vitacura, Santiago de Chile</li>
+                        <li></li>
+                    </ul>
+                    <h4>Mantente Informado!</h4>
+                    <form class="navbar-form ">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Ingresa tu email por favor">
+                        </div>
+                        <button type="submit" class="btn btn-default">Suscríbete</button>
+                    </form>
+                    <h4>Síguenos!</h4>
+                    <ul class="redes">
+                        <li><a href="#"><img src="image/facebook-white.svg" style="height:35px" alt=""></a> </li>
+                        <li><a href="#"><img src="image/instagram.svg" style="height:35px" alt=""></a></li>
+                        <li><a href="#"><img src="image/twitter-white.svg" style="height:35px" alt=""></a></li>
+                    </ul>
+                </div>
+            </div><!-- /container -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3331.509134447668!2d-70.5393396848024!3d-33.38387898079302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c952b6e45c13%3A0xe20a79d839401910!2sTupungato+10070%2C+Vitacura%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses-419!2scl!4v1539723621516"
+                width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
     </footer>
 </body>
 
